--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-
+<center>
+  <img src="https://github.com/moosemystic/moosemystic/blob/main/lant1_painting_of_a_moose_god._religious_traditional_figure._dr_570c06d9-a9a8-4f09-b730-61e4c1241278.png?raw=true"></img>
+</center>
