--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html><head></head><body bgcolor="#ddc997"><center>
-  <img src="https://github.com/moosemystic/moosemystic/blob/main/lant1_painting_of_a_moose_god._religious_traditional_figure._dr_570c06d9-a9a8-4f09-b730-61e4c1241278.png?raw=true">
+<html>
+  <head>
+    <title>moose mystic</title>
+  </head>
+  <body bgcolor="#ddc997">
+    <br><br><br>
+    <center><img src="https://github.com/moosemystic/moosemystic/blob/main/lant1_painting_of_a_moose_god._religious_traditional_figure._dr_570c06d9-a9a8-4f09-b730-61e4c1241278.png?raw=true">
 </center>
-</body></html>
+</body>
+</html>
