--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <title>moose mystic</title>
   </head>
   <body bgcolor="#ddc997">
+    <center>
+          <br><br><br>
+      <img src="https://github.com/moosemystic/moosemystic/blob/main/lant1_painting_of_a_moose_god._religious_traditional_figure._dr_570c06d9-a9a8-4f09-b730-61e4c1241278.png?raw=true">
+          <br><br><br>
     <br><br><br>
-    <center><img src="https://github.com/moosemystic/moosemystic/blob/main/lant1_painting_of_a_moose_god._religious_traditional_figure._dr_570c06d9-a9a8-4f09-b730-61e4c1241278.png?raw=true">
+    <br><br><br>
+      <p>moose mystics    -    est. 2023</p>
 </center>
 </body>
 </html>
