--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <br><br><br>
     <br><br><br>
     <br><br><br>
-      <p>moose mystics    -    est. 2023</p>
+      <p>moose mystic    -    est. 2023</p>
 </center>
 </body>
 </html>
