--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <br><br><br>
     <br><br><br>
       <p>moose mystic    -    est. 2023</p>
+      <a href="https://abyssite.com">abyssite.com</a>
 </center>
 </body>
 </html>
